2017-04-17  Charlie Zender  <zender@uci.edu>

	* Clarify conditions for outputting frac_b in regridder

2017-04-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha07 final changes';git push
	git tag -a 4.6.6-alpha07 -m 'Version 4.6.6-alpha07 new features: Coordinate --cll_msr, --frm_trm, --no_stg_grd, --area_out in regridder and splitter';git push --tags

	* Link --cll_msr, --frm_trm options to ncra, ncks front-ends

	* Expose --no_cll_msr, --no_frm_trm, --no_stg_grd options to ncclimo users

2017-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha06 final changes';git push
	git tag -a 4.6.6-alpha06 -m 'Version 4.6.6-alpha06 new features: fix which hsi; lst_rnk_ge2 generic; valid_min/max; rgr no_stg splitter';git push --tags

2017-04-14  Charlie Zender  <zender@uci.edu>

	* Splitter omits staggered FV grid by default when regridding

	* Regridder implement no_stg flag to omit staggered FV grid information

	* Regridder add valid_min/max to lat/lon

	* --lst_rnk_ge2 successfully eliminates grid variables in generic cases

	* Define is_crd_lk_var, is_rec_lk_var to avoid conflicting definitions of is_crd_var, is_rec_var

	* Fix hsi discovery for generic case with `which hsi`

	* NCO 4.6.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha05 final changes';git push
	git tag -a 4.6.6-alpha05 -m 'Version 4.6.6-alpha05 new features: ncremap front-end from ncclimo; --cal finds climatology, bounds variables; mmr documentation; UGRID 2D works; hsi locations; HPSS works';git push --tags

	* Add characteric coordinates for edges/faces to UGRID 2D output

	* Hard-code Cori/Edison and Rhea hsi locations

2017-04-13  Charlie Zender  <zender@uci.edu>

	* Fix nco_grd_nfr() to infer 2D grids written by nco_grd_mk()

	* Better annotate skeleton files in nco_grd_mk()
